--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/116 (1).png">
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -58,14 +59,54 @@
     <div class="container">
       <div class="row wheather-ditails">
         <div id="t-day" class="col-md-4 p-0 t-day">
+          <div class="wheather-header" id="today">
+            <div class="day"></div>
+            <div class="date"></div>
+          </div>
+  
+          <div class="wheather-content p-3" id="current">
+            <div class="location"></div>
+            <div class="degree">
+              <div class="num"></div>
+              <div class="forecast-icon">
+                <img src="" alt="" width="90">
+              </div>	
+            </div>
+            <div class="custom"></div>
+            <div class="d-flex align-items-center gap-4">
+              <span class="d-flex align-items-center gap-1"><img src="img/icon-umberella.png" alt=""><div class="humidity"></div></span>
+              <span class="d-flex align-items-center gap-1"><img src="img/icon-wind.png" alt=""><div class="winds"></div></span>
+              <span class="d-flex align-items-center gap-1"><img src="img/icon-compass.png" alt=""><div class="weatherTrend"></div></span>
+            </div>
+          </div>
         </div>
-
 
         <div id="day-1" class="col-md-4 s-day p-0">
+          <div class="wheather-header d-flex align-items-center justify-content-center">
+            <div class="day"></div>
+          </div>
+          <div class="wheather-content p-5 d-flex align-items-center justify-content-center flex-column gap-2">
+            <div class="forecast-icon">
+              <img src="#" alt="" width="48">
+            </div>
+            <div class="degree"></div>
+            <small></small>
+            <div class="custom"></div>
+          </div>
         </div>
 
-
         <div id="day-2" class="col-md-4 t-day p-0">
+          <div class="wheather-header d-flex align-items-center justify-content-center">
+            <div class="day"></div>
+          </div>
+          <div class="wheather-content p-5 d-flex align-items-center justify-content-center flex-column gap-2">
+            <div class="forecast-icon">
+              <img src="#" alt="" width="48">
+            </div>
+            <div class="degree"></div>
+            <small></small>
+            <div class="custom"></div>
+          </div>
         </div>
       </div>
     </div>
